# shieldlm

./: .gitignore  BLOGPOST_v2.md  BLOGPOST_v3.html  BLOGPOST_v3.md  CLAUDE.md  CRITICAL_ANALYSIS.md  LICENSE  LITERATURE_REVIEW.md  README.md  Spec.md  TRAINING_GUIDE.md  curate_dataset.py  pyproject.toml  requirements-eval.txt  requirements-serve.txt  requirements-train.txt  requirements.txt  taxonomy.yaml
.github/workflows/: ci.yml
configs/: deberta_base.yaml  deberta_large.yaml  llama_8b_qlora.yaml
hf_cards/: dataset_card.md  model_card.md
results/: deberta_base_eval.json  deberta_large_eval.json
scripts/: download_data.sh  publish_hf.py  run_full_pipeline.sh
shieldlm/: __init__.py  detector.py  evaluate.py  train.py  utils.py
tests/: test_curate.py  test_detector.py  test_evaluate.py
